--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html ng-app="ogrodnik">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="assets/index.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
 </head>
@@ -51,6 +51,6 @@
 
 </div>
 </body>
-<script src="index.js"></script>
+<script src="assets/index.js"></script>
 </html>
 
